--- a/Talk7/02_background/02-2_blockchain.tex
+++ b/Talk7/02_background/02-2_blockchain.tex
@@ -1,12 +1,12 @@
 \subsection{Blockchain}
 \label{subsec:02_Blockchain}
 
-Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew in a similar fashion. The idea of having a fully decentralized, tamper-proofed distributed online ledger, fascinated not only the digital world but also other non-digital areas. Moreover, while Bitcoin gained a bad reputation due to its price fluctuation \cite{Shackelford2016}, th Blockchain continued to receive attention from the intrustry and academia. However, questions arise, such as  if the Blockchain technology is the solution for existing problems or it is the problem itself \cite{Stinchcombe2017, Nielsen2018, Lunn2015}.
+Connected to the growing popularity of the Bitcoin Cryptocurrency that conquered the markets of the world, the interest for its underlying technology - the Blockchain - grew similarly. The idea of having a fully decentralized, tamper-proofed distributed online ledger, fascinated not only the digital world but also other non-digital areas. Moreover, while Bitcoin gained a bad reputation due to its price fluctuation \cite{Shackelford2016}, the Blockchain continued to receive attention from the industry and academia. However, questions arise, such as if the Blockchain technology is the solution for existing problems or it is a problem itself \cite{Stinchcombe2017, Nielsen2018, Lunn2015}.
 
 In the following subsections, the Blockchain technology shortly explained and discussed. It is not the goal of this section to give full technical insights into the various mechanisms but to provide a base of knowledge for the sections to come.
 
 \subsubsection{The Blockchain in Detail}
-The Blockchain is a shared, publicly available online ledger containing a chain of interlinked blocks, that themselves contain transactions between users. \cite{Wust2017}. No single user controls, updates or maintains the Blockchain. Instead, every action performed on the Blockchain requires consensus amongst all users (nodes) \cite{Shackelford2016}. Because its blocks are interlinked by a cryptographic hash and therefore contain information about the previous included blocks, no changes can be made to the Blockchain without being traceable in hindsight.
+The Blockchain is a shared, publicly available online ledger containing a chain of interlinked blocks that themselves contain transactions between users. \cite{Wust2017}. No single user controls, updates, or maintains the Blockchain. Instead, every action performed on the Blockchain requires consensus amongst all users (nodes) \cite{Shackelford2016}. Because its blocks are interlinked by a cryptographic hash and therefore contain information about the previously included blocks, no changes can be made to the Blockchain without being traceable in hindsight.
 
 The Blockchain is a data structure that allows humans and computers to interact with each other without having to rely upon trusted third parties. Instead, it is the controlling power of the data structure itself or put differently, the consensus amongst all users, that assures the compliance of each party with their part of a deal. As a result, it allows "people who have no particular confidence in each other [to] collaborate without having to go through a neutral central authority" and becomes "a machine that creates trust". \cite{Economist2015} \cite{Shackelford2016}
 
@@ -22,12 +22,12 @@ The most important properties of the Blockchain are compiled in the following li
 \subsubsection{Blockchain Application Scenarios}
 Due to the Blockchains various properties, multiple use-cases emerged. Even though the below list is neither exhaustive nor its items disjunct, it shows the most common scenarios for the use of the Blockchain \cite{Wust2017} that are not further discussed in this paper:
 \begin{itemize}
-  \item \textbf{Crypto Currencies}: From the moment when the paper by Satoshi Nakamoto \cite{Nakamoto2009} was published, Blockchains and cryptocurrencies were interlinked. Because a cryptocurrencies is per definition a digital asset, the Blockchain suits this use case particularly well.
+  \item \textbf{Crypto Currencies}: From the moment when the paper by Satoshi Nakamoto \cite{Nakamoto2009} was published, Blockchains and cryptocurrencies were interlinked. Because a cryptocurrency is per definition a digital asset, the Blockchain suits this use case particularly well.
   \item \textbf{Supply Chain Management}: In Supply Chain Management, the flow of goods includes "various intermediate storage and production cycles" \cite{Wust2017} and the Blockchain presents a suitable way to store and verify all processes in a tamperproof manner.
   \item \textbf{Payment and Money Transactions}: Transactions between different banks and result in temporary debts between them. This issue can be solved using \textit{Distributed Ledger Technologies}, that make use of a Blockchain to settle debts.
   \item \textbf{Decentralized Autonomous Organizations (DAO)}: "A DAO is an organization that is run autonomously through a set of smart contracts" \cite{Wust2017}. A DAO is therefore fundamentally dependent on the Blockchain, as it relies on decentralized governance of funds enforced by smart contracts.
-  \item \textbf{Proof of Ownership}: The idea of proofing intellectual or physical property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (\textit{e.g.}, image, text or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.
+  \item \textbf{Proof of Ownership}: The idea of proofing intellectual or physical property is one of the most straightforward use cases for the Blockchain. In this scenario, the user registers his or her property (\textit{e.g.}, image, text, or another object like land) through the use of an identity function in the Blockchain. "While this does not fully prove ownership, it does provide evidence of ownership if no one else can show that the object was previously published" \cite{Wust2017}.
 \end{itemize}
 
 \subsubsection{The Blockchain and Cybersecurity}
-In most cases, the Blockchain technology is used within different types of applications to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities or the security of critical physical infrastructures fall into this category. Another field of applications uses the Blockchain directly to mitigate cyber attacks. Examples, therefore, are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats in the set up of the application itself. Both of those categories are covered in subsequent sections.
+In most cases, the Blockchain technology is used within different types of applications to make them more secure. More secure databases, transaction systems for banks, the replacement of certificate authorities, or the security of critical physical infrastructures fall into this category. Another field of applications uses the Blockchain directly to mitigate cyber attacks. Examples, therefore, are the mitigation of DDoS Attacks or the handling of PKI related cyber threats. Applications that fall into the second category use the Blockchain more direct and immediate, while the first category uses them on a higher level, to help to reduce the cybersecurity threats in the set up of the application itself. Both of those categories are covered in subsequent sections.
