--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -4,19 +4,19 @@
 % TODO add an army of zombies
 
 % Introduction describing the base of such attacks
-A DDoS attack has become a popular way to cripple servers of an institution or a private person. The current internet design has the purpose of moving packets from a source to a known destination. The network itself forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the transported packages. This concept has been called the \textbf{end-to-end paradigm}. As no intermediary entity will intervene, a party (either sender or receiver) can damage its opposition by using attack possibilities such as IP Spoofing or the aforementioned DDoS attacks \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \cite{Mirkovic2004}, the following security issues raise opportunities of attacks:
+A DDoS attack has become a popular way to cripple servers of an institution or a private person. The current internet design has the purpose of moving packets from a source to a known destination. The network itself forwards all packages at minimal cost and generally outsources the complexity, including security, transport reliability and quality of service to the sender and receiver of the transported packages. This concept has been called the \textbf{end-to-end paradigm}. As no intermediary entity intervenes, a party (either sender or receiver) can damage its opposition by using attack possibilities such as IP Spoofing or the aforementioned DDoS attacks \cite{Mirkovic2004}. By faking the source address in the header of a packet, the sender can hide its identity. This security issue is called IP Spoofing \cite{Cloudflare2019}. As described in \cite{Mirkovic2004}, the following security issues raise opportunities of attacks:
 
 \begin{itemize}
   \item \textbf{Limited internet resources}: Every host or service has hardware limitations that users may consume.
   \item \textbf{Highly interdependent internet security}: No matter how secure a host may be configured, DDoS attacks always depend on the security of others within the Internet.
-  \item \textbf{No collocation of intelligence and resources}: The intermediate network has plentiful resources, as they forward packages at minimal costs.  In contrast, the end networks only invest in as much bandwidth as they planned to use for their services.
+  \item \textbf{No collocation of intelligence and resources}: The intermediate network has plenty of resources, as they forward packages at minimal costs.  In contrast, the end networks only invest in as much bandwidth as they planned to use for their services.
   \item \textbf{No enforcement of accountability}: As described above, attackers can escape from accountability by using IP Spoofing mechanisms.
   \item \textbf{Distribution of control}: In a world of a distributed network, such as the Internet, multiple clients participate in the network. Each one of them has different security mechanisms. No global control entity can define a security policy or standard.
 \end{itemize}
 % Additional reasons/base of attacks
 Since the number of connected devices has increased due to IoT devices, such as connected cameras, or smart fridges, attackers have a growing capacity to take control of unsecured devices \cite{Rodrigues2017}. By operating multiple such attacking entities called computer bots (clients that have been taken over by malware) remotely, attackers try to overflood a website, a network or a server and prevent rightful users from accessing the application. The service is either responding slowly or shut down entirely. More precisely, attackers send a stream of packets to the victims, which consume all capacity of hardware resources and therefore make it unavailable for legitimate clients to access the service provider.
 
-Another popular way for an attacker is to send malformed packets to negatively impact the availability of the application service. Those packets confuse the web application or some protocols on the victims' hardware and force the server to reboot. There are probably additional possibilities to attack services on the internet. Such attack possibilities are mostly discovered first once they have been exploited in a significant attack and servers have been down for a particular time \cite{Mirkovic2004}.
+Another popular way for an attacker is to send malformed packets to impact the availability of the application service negatively. Those packets confuse the web application or some protocols on the victims' hardware and force the server to reboot. There are probably additional possibilities to attack services on the internet. Such attack possibilities are mostly discovered first once they have been exploited in a significant attack and servers have been down for a particular time \cite{Mirkovic2004}.
 
 % DDoS procedure
 The procedure of a DDoS attack is split into the following phases: An attacker recruits multiple agents (clients) into which the attacker injects malicious code. Attackers often hide the identity of infected clients by using IP Spoofing mechanisms \cite{Mirkovic2004}.
@@ -27,20 +27,20 @@ The procedure of a DDoS attack is split into the following phases: An attacker r
 Multiple incentives exist to attack clients using DDoS attacks. Unfortunately, the primary goal of such an attack is to damage the selected victim. Motives may be found in prestige (gaining respect within the hacker community when attacking popular websites or services), personal hatred, material gain (damaging competitors by attacking them), any political reasons, or blackmailing others \cite{Mansfield-Devine2015, Mirkovic2004}.
 
 %  Generalize possibilities of current mitigation strategies
-Various companies currently offer DDoS protection services, such as Cloudflare or Akamai, and their number is increasing \cite{Pras2016}. Those solutions serve as a proxy and manage routing, load balance, and drop traffic when a DDoS attack occurs. For all solutions, a third party DDoS Protection Service (DPS) provider is required, resulting in extra cost, as the analyses are performed in the cloud \cite{Rodrigues2017}. Those cloud-based defense services could become a communication bottleneck because the traffic (download and processing) is dependent on a single provider. By utilizing resources from other companies, the workload of mitigating DDoS attacks can be shared \cite{Rodrigues2017}.
+Many companies currently offer DDoS protection services, such as Cloudflare or Akamai, and their number is increasing \cite{Pras2016}. Those solutions serve as a proxy and manage routing, load balance, and drop traffic when a DDoS attack occurs. For all solutions, a third party DDoS Protection Service (DPS) provider is required, resulting in extra cost, as the analyses are performed in the cloud \cite{Rodrigues2017}. Those cloud-based defense services could become a communication bottleneck because the traffic (download and processing) is dependent on a single provider. By utilizing resources from other companies, the workload of mitigating DDoS attacks can be shared \cite{Rodrigues2017}.
 
 % TODO More about DOTS (DDoS Open Threat Signaling) an IETF proposal
 % TODO probably explain Gladius?
-The Internet Engineering Task Force (IETF) additionally is proposing a protocol called DDos Open Threat Signaling (DOTS) that requires both clients and servers. A new protocol is required which has to be maintained. DOTS clients have to register to a DOTS server and use this protocol among the agents to organize the DDoS protection \cite{Rodrigues2017}. In the following sections, various approaches to mitigating DDoS attacks without the need to deploy a new protocol are illustrated.
+The Internet Engineering Task Force (IETF) additionally is proposing a protocol called DDos Open Threat Signaling (DOTS) that requires both clients and servers. A new protocol is required, which has to be maintained. DOTS clients have to register to a DOTS server and use this protocol among the agents to organize the DDoS protection \cite{Rodrigues2017}. In the following sections, various approaches to mitigating DDoS attacks without the need to deploy a new protocol are illustrated.
 
 \subsubsection{DDos Mitigation with Smart Contracts}
 % \cite{Rodrigues2017}
 This concept investigates a possibility to mitigate a DDoS attack in a fully decentralized manner using smart contracts and their underlying Blockchain. These technologies allow sharing information (detection and mitigation mechanisms as well as IP addresses) about attacks in an automated and decentralized system \cite{Rodrigues2017}.
 
-As described in Section~\ref{subsec:02_smart_contracts}, a smart contract is a software that is made to help contracts being able to execute and verify on their own. To do so, there has to be an infrastructure that implements, verifies and enforces the negotiation of those smart contracts by using particular computer protocols and that runs fully decentralized. As known from Section~\ref{subsec:02_Blockchain}, a Blockchain ensures permanent storage and provides obstacles to manipulation of content and is thus an ideal infrastructure for smart contracts. Nodes participating in the Blockchain run a smart contract by executing and validating a script and thereafter storing the contract and the results in a new block \cite{Rodrigues2017}.
+As described in Section~\ref{subsec:02_smart_contracts}, a smart contract is a software that is made to help contracts being able to execute and verify on their own. To do so, there has to be an infrastructure that implements, verifies, and enforces the negotiation of those smart contracts by using particular computer protocols and that runs fully decentralized. As known from Section~\ref{subsec:02_Blockchain}, a Blockchain ensures permanent storage and provides obstacles to manipulation of content and is thus an ideal infrastructure for smart contracts. Nodes participating in the Blockchain run a smart contract by executing and validating a script and after that storing the contract and the results in a new block \cite{Rodrigues2017}.
 
 % Proposed System Architecture
-As presented in Section~\ref{system_architecture} the architecture is composed of three components. The customers report IP addresses to the Blockchain via smart contracts. The Autonomous Systems (AS) retrieve lists containing these addresses and implement DDoS mitigation techniques. All participants interact with the underlying Blockchain \cite{Rodrigues2017}.
+As presented in Section~\ref{system_architecture}, the architecture is composed of three components. The customers report IP addresses to the Blockchain via smart contracts. The Autonomous Systems (AS) retrieve lists containing these addresses and implement DDoS mitigation techniques. All participants interact with the underlying Blockchain \cite{Rodrigues2017}.
 
 The web server of one AS is a victim of a DDoS attack. Participants that have proven ownership of their IP then create a smart contract that stores all IP addresses of attackers. Subscribed systems receive updated lists of IP addresses every 14 seconds, as the underlying Blockchain, Ethereum, creates new blocks within that timeframe. As soon as all other autonomous systems receive the list of attackers, various mitigation strategies may be triggered tailored to the specific domain \cite{Rodrigues2017}.
 \begin{figure}[ht]
@@ -52,7 +52,7 @@ The web server of one AS is a victim of a DDoS attack. Participants that have pr
 \end{figure}
 
 % Conclusion
-This approach uses an already existing and publicly available distributed infrastructure to adumbrate IP addresses that are either white- or blacklisted. This approach serves well as an additional security mechanism to existing DDoS defense systems across multiple domains by using an Ethereum Blockchain without transferring the control of their internal network to a third party. For large-scale attacks, this approach currently is not supported well, but this issue will be addressed in future work \cite{Rodrigues2017}.
+This approach uses an already existing and publicly available distributed infrastructure to adumbrate IP addresses that are either white- or blacklisted. This approach serves well as an additional security mechanism to existing DDoS defense systems across multiple domains by using an Ethereum Blockchain without transferring the control of their internal network to a third party. For large-scale attacks, this approach currently is not supported well, but this issue is to be addressed in future work \cite{Rodrigues2017}.
 
 
 \subsubsection{Mitigation-as-a-service in Cooperative Network Defenses}
@@ -61,10 +61,10 @@ This approach uses an already existing and publicly available distributed infras
 % Short introduction
 With cooperation between multiple domains, various collaborating AS can alleviate DDoS attacks by redirecting excessive traffic to other domains that filter the traffic. Incentives ensure the use of mitigation-as-a-service for cooperative network defenses. By paying fees, enterprises or individuals can subscribe to such a cooperative defense network and protect themselves from future attacks \cite{Mannhart2018}.
 
-As soon as a target detects an attack, it sends a request to all participating autonomous systems to mitigate the current attack. Subsequently, a mitigator that is responsible for the range being attacked then either accepts or declines the mitigation request. By using a \textbf{proof-of-mitigation}, the completion of the mitigation has to be confirmed, and the target can pay the mitigator. As this proof-of-mitigation has to satisfy time constraints, tamper-evidence, and reproducibility, this proof has to be executed automatically during the current time window. Additionally, any user interaction has to be excluded to ensure efficiency \cite{Mannhart2018}. Various approaches creating such proof will be described and discussed in this section and have been tested on different metrics related to security and practicability.
+As soon as a target detects an attack, it sends a request to all participating autonomous systems to mitigate the current attack. Subsequently, a mitigator that is responsible for the range being attacked then either accepts or declines the mitigation request. By using a \textbf{proof-of-mitigation}, the completion of the mitigation has to be confirmed, and the target can pay the mitigator. As this proof-of-mitigation has to satisfy time constraints, tamper-evidence, and reproducibility, this proof has to be executed automatically during the current time window. Additionally, any user interaction has to be excluded to ensure efficiency \cite{Mannhart2018}. Various approaches creating such proof are described and discussed in this section and have been tested on different metrics related to security and practicability.
 
 \paragraph{Marketplace of Mitigation VNFs}
-Virtualized  Network Functions (VNF) can be deployed on any hardware without additional configurations. The concept of Network Function Virtualization (NFV) can, therefore, provide an efficient solution by virtualizing a single function in the network as seen in Section~\ref{ddos_marketplace_vnf}. All autonomous systems involved in the cooperative network could load the VNF image directly from the marketplace, which then provides the mitigation service hosted on virtual devices. By comparing the hashed checksum of the VNF image to a known value from the marketplace, the integrity of the VNF image will be checked. Additionally, local caching of all VNFs avoids large load on the marketplace. A big advantage of this approach is the high degree of isolation, as the VNFs consist of the minimal code necessary to handle the mitigation. Unfortunately, the target still needs to trust that the mitigator only runs untampered VNFs directly from the marketplace \cite{Mannhart2018}.
+Virtualized  Network Functions (VNF) can be deployed on any hardware without additional configurations. The concept of Network Function Virtualization (NFV) can, therefore, provide an efficient solution by virtualizing a single function in the network, as seen in Section~\ref{ddos_marketplace_vnf}. All autonomous systems involved in the cooperative network could load the VNF image directly from the marketplace, which then provides the mitigation service hosted on virtual devices. By comparing the hashed checksum of the VNF image to a known value from the marketplace, the integrity of the VNF image is checked. Additionally, local caching of all VNFs avoids large load on the marketplace. A big advantage of this approach is the high degree of isolation, as the VNFs consist of the minimal code necessary to handle the mitigation. Unfortunately, the target still needs to trust that the mitigator only runs untampered VNFs directly from the marketplace \cite{Mannhart2018}.
 \begin{figure}[ht]
   \begin{center}
     \includegraphics[scale=0.5]{Talk7/img/ddos/cooperative_network_marketplace_vnfs}
@@ -74,7 +74,7 @@ Virtualized  Network Functions (VNF) can be deployed on any hardware without add
 \end{figure}
 
 \paragraph{Trusted Computing}
-In contrast to the previous approach as illustrated in \ref{ddos_marketplace_vnf}, the mitigator directly initiates the mitigation. So-called Trusted Platform Modules (TPM) enable secure storage of hashes. This allows that only the code that is approved by the cooperative defense will be run on the system. VNFs create a defense network where trusted and known VNFs always handle requests for mitigation without trusting the responsible operator that provides the mitigation service to the autonomous system.  A big disadvantage of trusted computing is the strict hardware requirement, as the TPM is only available as a standalone chip or integrated into the motherboard \cite{Mannhart2018}.
+In contrast to the previous approach, as illustrated in \ref{ddos_marketplace_vnf}, the mitigator directly initiates the mitigation. So-called Trusted Platform Modules (TPM) enable secure storage of hashes. This allows that only the code that is approved by the cooperative defense is run on the system. VNFs create a defense network where trusted and known VNFs always handle requests for mitigation without trusting the responsible operator that provides the mitigation service to the autonomous system.  A significant disadvantage of trusted computing is the strict hardware requirement, as the TPM is only available as a standalone chip or integrated into the motherboard \cite{Mannhart2018}.
 
 \paragraph{Secure logging}
 As mitigators can use full network infrastructure, they are allowed to proof the mitigation using the available traffic data. By having a detailed log of network activities, they could prove the successful mitigation by identifying a reduction in the traffic from the attack source to the DDoS target. A mitigation-proof based on the log files decreases the complexity of the proof. The aforementioned log file has been created on an isolated system (which requires no additional trust) and therefore has to be checked about its integrity by a third party. A disadvantage comes with high-volume attacks which create large log files. These large files introduce additional delays as the log files have to be transferred for remote auditing \cite{Mannhart2018}.
@@ -120,6 +120,6 @@ This architecture is based on key technologies such as SDN and NFV. Blockchain a
 
 Similarly to \cite{Rodrigues2017}, this approach deals with cooperative, multi-domain DDoS defense systems, but it presents a Blockchain Signaling System (BloSS) which is a somewhat technical approach of deploying hardware simplifying signals of DDoS attacks. Principal components for a BloSS are smart contracts that describe how information has to be transferred between AS and decentralized applications that include parameters defining the interaction of AS. Additionally, a consortium based Blockchain, differentiating from the public and private Blockchains, serves as an intermediary level of confidence.
 
-An AS creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central contract is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. In order to prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism needs to be set by defining tokens \cite{Rodrigues2019}.  % TODO what do they do?
+An AS creates a wallet and notifies a smart contract that stores some information. The smart contract then implements a method to reclaim addresses published by other systems by querying a central smart contract. This central contract is used to configure all involved smart contracts with updated information on their managed IP networks, as the addresses of the involved wallets are immutable. To prevent free-riding peers (parties that only consume without any contribution), an incentive mechanism needs to be set by defining tokens \cite{Rodrigues2019}.
 
 %  TODO more about Architecture and Hardware?
