--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -16,19 +16,19 @@ Traditional PKI systems are most visibly used for communication over the web. Be
 
 A PKI certificate verifies that the given name-value (\textit{e.g.}, domain name and public key) binding is authentic and is itself signed with the key of a CA. The trustworthiness of a CA is signed by a higher-level CA, building a chain up to a root-level CA that ultimately needs to be trusted without verification. When establishing communication with a server over HTTPS, a client verifies the identity of the server according to its certificate, and client and server confidentially decide on a data encryption secret by employing asymmetric encryption. All further message and data exchanges are secured with symmetric encryption \cite{straub_tobias_usability_2006}. The procedures of PKI management as employed in HTTPS/TLS, as well as many other systems and private infrastructures, are standardized by the IETF in the X.509 standard \cite{adams_internet_2015}.
 
-Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (\textit{i.e.}, which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively broad use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with Blockchain architectures.
+Contrary to the centralized approach, the Pretty Good Privacy (PGP) architecture is based on a decentralized web-of-trust where all participants manually define their trust anchors (\textit{i.e.}, which entities to trust as the anchor for a certificate chain) instead of relying on a predefined trust store as included in operating systems or browsers \cite{straub_tobias_usability_2006}. While PGP is in relatively widespread use for secured email communication, this work focuses mainly on centralized infrastructures for their approachability with Blockchain architectures.
 
 
 \subsubsection{Threat Model for Public Key Infrastructures}
 \label{subsubsec:threat_model_pki}
 
-PKI systems allow for an establishment of trust and a secure exchange between parties that do not necessarily know each other. However, both participating parties need to trust the centralized CA to issue valid certificates. The most visible threat to a PKI system is, therefore, an attack on this centralized trusted party.
+PKI systems allow for an establishment of trust and secure exchange between parties that do not necessarily know each other. However, both participating parties need to trust the centralized CA to issue valid certificates. The most apparent threat to a PKI system is, therefore, an attack on this centralized trusted party.
 
 Any such kind of attack could, if successful, allow an intruder to generate fraudulent certificates, which could then be used to impersonate one or more of the parties and perform a proxied man-in-the-middle attack. In such an attack, the attacker acts as a proxy that intercepts messages between the parties, decrypts and extracts their contents, and redirects them to the original recipient, making it very difficult for the participants to figure out they are being intercepted \cite{zusman_criminal_2008}.
 
 In the concrete example of a web certification authority, domains are most often validated by merely sending an email to an address on the domain to be certified (\textit{e.g.}, webmaster@xyz) or by verification of DNS records. This indirect verification creates vulnerabilities on several levels, as emails and DNS settings are managed by separate entities that could be attacked. CAs have also been known to issue fraudulent certificates on government request (\textit{e.g.}, for censorship), or through simple human error \cite{zusman_criminal_2008, zohar_blockchain-based_2019}.
 
-As centralization in PKI systems leads to a big attack surface, developing approaches that can function without the need for any such central entities (\textit{e.g.}, CAs) have been a topic of several publications in recent years. The following sections provide a more detailed overview of decentralized PKI in general as well as more specific applications in the area of web certification. While there are many other types of attacks on PKI (\textit{e.g.}, obtaining a private key through social engineering or directly attacking the encryption protocols), we focus on the critical aspect of centralization in this work.
+As centralization in PKI systems leads to a large attack surface, developing approaches that can function without the need for any such central entities (\textit{e.g.}, CAs) have been a topic of several publications in recent years. The following sections provide a more detailed overview of decentralized PKI in general as well as more specific applications in the area of web certification. While there are many other types of attacks on PKI (\textit{e.g.}, obtaining a private key through social engineering or directly attacking the encryption protocols), we focus on the critical aspect of centralization in this work.
 
 
 \subsubsection{Decentralized Public Key Infrastructures}
@@ -49,7 +49,7 @@ The Blockstack system was initially based on the Namecoin Blockchain using a ded
 
 Mainly due to the security implications of Namecoin also applying to Blockstack ID, its maintainers have intermittently developed a new approach that replaces Namecoin with the Bitcoin Blockchain. Contrary to its predecessor, Blockstack does not store its data directly in the Blockchain. Instead, the Blockchain only stores hashes of the data, while the data itself is stored in external systems \cite{ali_blockstack:_2016}.
 
-The Blockstack architecture introduces a novel approach that is called the virtualchain. The virtualchain is a logical structure built on top of a Blockchain that processes transactions relevant to the Blockstack system and implements a state-machine over these transactions. When state updates occur, new transactions are encoded and written to the underlying Blockchain (subject to consensus). The virtualchain is used to compute a global state of who owns what names and what is associated with these names. These components form the control plane of the Blockstack architecture \cite{ali_blockstack:_2016}.
+Blockstack introduces a novel approach that is called the virtualchain. The virtualchain is a logical structure built on top of a Blockchain that processes transactions relevant to the Blockstack system and implements a state-machine over these transactions. When state updates occur, new transactions are encoded and written to the underlying Blockchain (subject to consensus). The virtualchain is used to compute a global state of who owns what names and what is associated with these names. These components form the control plane of the Blockstack architecture \cite{ali_blockstack:_2016}.
 
 Instead of storing the production data in Blockchain productions, Blockstack only appends hashes and pointers to the real data to the Blockchain. The production data is managed by a separate data plane that consists of routing as well as actual persistence capabilities. Similar to the approach taken by traditional DNS, the routing layer is based on zone files that contain all routes/records for any given name. The actual persistence layer then stores whatever data is to be associated with a record in a database or another storage system \cite{ali_blockstack:_2016}.
 
@@ -70,11 +70,11 @@ When clients need to look up the current value that corresponds to a name, they 
 
 \subsubsection{Web Certifications using Blockchain Technologies}
 
-One of the most important application areas of PKI systems is the certification of the integrity of domains in the world wide web. Through its exposure to a substantial number of people, the web certification system is one of the most widely exposed and has been subject to several critical vulnerabilities and attacks. Recent research tries to prevent some of these attacks by employing a Blockchain-based web certification infrastructure that does not need to rely on trusted central entities.
+One of the most critical application areas of PKI systems is the certification of the integrity of domains in the world wide web. Through its exposure to a substantial number of people, the web certification system is one of the most widely exposed and has been subject to several critical vulnerabilities and attacks. Recent research tries to prevent some of these attacks by employing a Blockchain-based web certification infrastructure that does not need to rely on trusted central entities.
 
 \paragraph{Ghazal}
 
-In the traditional web certification model, domains and their owners are validated by trusted certification authorities. The most popular means of validation is domain-validation, meaning that only the association between the public key and domain name is certified. This approach suffers from the many critical issues due to indirections as described in Section \ref{subsubsec:threat_model_pki}.
+In the traditional web certification model, domains and their owners are validated by trusted certification authorities. The most popular means of validation is domain-validation, meaning that only the association between the public key and domain name is certified. This approach suffers from the many critical issues due to indirections, as described in Section \ref{subsubsec:threat_model_pki}.
 
 Ghazal proposes a new uni-authoritative paradigm for web certification and domain infrastructure. Concretely, no single authority should be needed to certify entities or register domains, as the Blockchain itself could serve as a sort of authoritative entity. This approach has the potential to solve many of the vulnerabilities occurring due to indirections and centralization in general \cite{zohar_ghazal:_2019}.
 
@@ -97,7 +97,7 @@ In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate auth
 
 A Keyless Signature Infrastructure (KSI) is the basis for an alternative approach to verification of the integrity of documents that does not depend on the secrecy of private keys. A document that is submitted to a KSI is first hashed and then added to a Merkle hash-tree containing all documents processed in the same round (\textit{i.e.}, with other documents that arrived around the same time). The signature token received upon document submission can then be used to check whether a document was contained in the tree at the given time. By following the path encoded in the signature token, it must be possible to reconstruct the root-hash of the entire tree \cite{hutchison_keyless_2013, jamthagen_blockchain-based_2016}.
 
-The KSI architecture processes incoming signature requests in rounds (\textit{e.g.}, one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree (``hash calenda''). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (\textit{i.e.}, signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
+The KSI architecture processes incoming signature requests in rounds (\textit{e.g.}, one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree (``hash calendar''). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (\textit{i.e.}, signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
 
 The authors of \cite{hutchison_keyless_2013} suggest that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
 
