--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -1,10 +1,10 @@
 \section{Final Considerations}
 
-The goal of this section is first to summarize the key points of this paper, and second to provide a discussion and outlook in the context of the research shown in this work.
+The goal of this section is to summarize the key points of this paper as well as to provide a discussion in the context of the research shown in this work.
 
 \subsection{Summary}
 
-After giving some foundational concepts in the areas of cybersecurity, Blockchain, and smart contracts, the potential use of Blockchain technology for combating DDoS attacks, for decentralizing PKI, for securing the IoT, as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
+After providing some foundational concepts in the areas of cybersecurity, Blockchain, and smart contracts, the potential use of Blockchain technology for combating DDoS attacks, for decentralizing PKI, for securing the IoT, as well as for some specific applications is elaborated. In conclusion, Blockchain technology is found to be a good choice whenever there is a need for integrity and decentralization.
 
 For dealing with DDoS attacks, Blockchains and smart contracts can be used to serve as a decentralized database to store white- and blacklisted IP-addresses. Blockchains and smart contract also facilitate the sharing of information.
 Various mitigation techniques such as SDN and NFV can be combined and facilitated with Blockchain technology and smart contracts.
@@ -13,21 +13,20 @@ In PKI, a significant danger is a certificate authority being hacked. Decentrali
 With Gazal, the traditional web certification model is moved to the Ethereum Blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
 
 In IoT, Blockchain technology is proposed to help with the integrity of IoT datasets. IoT devices like sensors typically generate lots of data. Blockchain preserves the integrity of IoT generated datasets. Further, IoT and Blockchain combinations are a useful
-combination in managing IoT devices. This can be along a supply chain where IoT devices change ownership or have to record transactions or in a smart home
+combination in managing IoT devices. This can be along a supply chain where IoT devices change ownership or have to record transactions, or in a smart home
 where access roles between all smart devices are defined in smart contracts, securing the IoT network from malicious tampering.
 
-Furthermore, Blockchain technology can be used in various concrete applications to enhance their security.
+Furthermore, Blockchain technology can be used in various concrete applications, enhancing their security.
 In e-voting systems, Blockchains can be used as a transparent and incorruptible database.
-In smart cities, autonomous vehicle Blockchain technology can enhance cybersecurity as well.
-In the healthcare sectors, Blockchain can be used to share patients data between hospitals with an auditable trail. In one of the proposed systems, the MedRec systems, patients can authorize what data to share and with whom.
-In smart cities and autonomous vehicles, Blockchain helps to solve the problem of centralization, unscalability, and unsecured communication architectures by its very nature.
+In smart cities, autonomous vehicle Blockchain technology can be applied to enhance cybersecurity. In this area, Blockchain helps to solve the problem of centralization, unscalability, and unsecured communication architectures by its very nature.
+In the healthcare sector, Blockchain can be used to share patient data between hospitals based on an auditable trail. In one of the proposed systems, the MedRec systems, patients can authorize what data to share and with whom.
 
-The question remains whether Blockchains are really needed and if they really solve a problem or shift the problem somewhere else. The next section discusses this point.
+The question remains whether Blockchains are really needed and if they solve a problem or shift the problem somewhere else.
 
 \subsection{Discussion}
 
 As shown in this paper, there are various ways in which Blockchain technology can enhance cybersecurity.
-However, Blockchains have their limitations. They use much power and don't scale well. This is a problem, especially for IoT applications where devices are designed to use little power and have little storage. Therefore the Blockchains are sometimes adapted to fit their use case better and for example, use trust instead of proof of work.
+However, Blockchains have their limitations. They use much power and don't scale well. This is a problem, especially for IoT applications where devices are designed to use little power and have little storage. Therefore the Blockchains are sometimes adapted to fit their use case better and, for example, to use trust instead of proof of work.
 
-Before trying to apply Blockchain technology to solve a problem, we think it is important to first reflect on the question of whether a Blockchain is really needed, as shown in the flowchart in Figure~\ref{fig:Blockchain_or_not}.
-Fundamentally Blockchains cannot solve problems of human nature. In e-voting, if the government itself is not trusted, how can one trust the Blockchain set up by the government? Nevertheless, there is a place for Blockchain technology for helping with cybersecurity as this paper has shown by collecting examples thereof.
+Before trying to apply Blockchain technology to solve a problem, it is important to first reflect on the question of whether a Blockchain is really needed, applying a process as shown in the flowchart in Figure~\ref{fig:Blockchain_or_not}.
+Fundamentally, Blockchains cannot solve problems of human nature. In e-voting, if the government itself is not trusted, how can one trust the Blockchain set up by the government? Nevertheless, there is a place for Blockchain technology for helping with cybersecurity as this paper has shown by collecting examples thereof.
